# flask

./: README.rst
examples/paircomp/: .gitignore  MANIFEST.in  README.md  README.rst  example_task.csv  setup.cfg
examples/paircomp/paircomp/: __init__.py  auth.py  comparison.py  schema.sql
examples/paircomp/paircomp/static/: style.css
examples/paircomp/paircomp/templates/: base.html  comparison.html  login.html  signup.html
