[metadata]
name = paircomp
version = 1.0.0
url = https://github.com/ktrk115/flask/tree/master/examples/paircomp
license = BSD-3-Clause
maintainer = ktrk115
description = The simple app for pairwise image comparison.
long_description = file: README.rst
long_description_content_type = text/x-rst

[options]
packages = find:
include_package_data = true
install_requires =
    Flask
