[metadata]
name = paircomp
version = 1.0.0
url = https://github.com/ktrk115/flask/tree/master/examples/paircomp
license = BSD-3-Clause
maintainer = ktrk115
description = The simple app of pairwise comparison for image data.
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
include_package_data = true
install_requires =
    Flask
